fix strange overlaps and reabot thinking loader styles

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -37,8 +37,9 @@
 
 .chat-logs {
   display: grid;
+  align-items: start;
   width: 100%;
-  flex: 1;
+  margin-bottom: auto;
 }
 
 .header-title {
@@ -57,6 +58,7 @@
 
 .reabot-form {
   padding: 18px 22px;
+  cursor: pointer;
   background-color: var(--clr-primary-200);
   display: flex;
   gap: 20px;
@@ -64,6 +66,9 @@
 
   border-bottom-left-radius: 13px;
   border-bottom-right-radius: 13px;
+  &:has(.user-input:focus) {
+    outline: solid 1px var(--clr-primary-900);
+  }
 }
 
 .user-input {
@@ -184,6 +189,7 @@
 
 .thinking-elements {
   display: flex;
+  margin-top: 26px;
   gap: 3px;
   align-items: center;
 }
